<resources>
    <string name="app_name">DerDieDas</string>
    <string name="action_settings">Settings</string>

    <string name="start_quiz">Start quiz</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="end_quiz">End quiz</string>
    <string name="submit">Submit</string>
    <string name="enter_noun_here">Enter noun here</string>
    <string name="der" translatable="false">Der</string>
    <string name="die" translatable="false">Die</string>
    <string name="das" translatable="false">Das</string>
    <string name="view_list_of_nouns">View list of nouns</string>
    <string name="quiz_gender_and_noun">___ %s</string>
    <string name="i_forgot_or_don_t_know">I forgot or don\'t know</string>
    <string name="i_already_know">I already know</string>
    <string name="der_artikel">Der Artikel</string>
    <string name="no_more_items">No more items to review; well done!</string>
    <string name="save_noun">Save noun</string>
    <string name="categories">Categories</string>
    <string name="add_noun">Add noun</string>
    <string name="next_noun">Next noun</string>
    <string name="done_text">No more items to review; well done!</string>
</resources>
