...

@Composable
@Preview
fun NounListScreenPreview() {
    NounListBox(
        navController = rememberNavController(),
        nounList = List(20) { Noun("Mann", Gender.DER) }
    )
}

